cmake_minimum_required(VERSION 3.15)
project(ArduinoToMove)

set(CMAKE_CXX_STANDARD 14)

add_executable(ArduinoToMove ArduinoToMove.ino
        Motor.cpp Motor.h)

include_directories(/Applications/Arduino.app/Contents/Java/hardware/arduino/avr/cores/arduino)
include_directories(/Applications/Arduino.app/hardware/arduino/avr/variants/standard)
include_directories(/Applications/Arduino.app/hardware/tools/avr/avr/include)
include_directories(/Applications/Arduino.app/hardware/tools/avr/lib/gcc/avr/4.9.2/include)
include_directories(/Applications/Arduino.app/Contents/Java/libraries/WiFi/src)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/tools/sdk/include/esp32)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/libraries/WiFi/src/)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/libraries/Wire/src)

include_directories(/Applications/Arduino.app/Contents/Java/hardware/arduino/avr/cores/arduino)
include_directories(/Applications/Arduino.app/hardware/arduino/avr/variants/standard)
include_directories(/Applications/Arduino.app/hardware/tools/avr/avr/include)
include_directories(/Applications/Arduino.app/hardware/tools/avr/lib/gcc/avr/4.9.2/include)
include_directories(/Applications/Arduino.app/Contents/Java/libraries/WiFi/src)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/cores/esp32)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/cores/esp32/apps/sntp)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/tools/sdk/include/esp32)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/libraries/BluetoothSerial/src)
include_directories(/Users/katoueisuke/Documents/Arduino/hardware/espressif/esp32/libraries/WiFi/src/)
include_directories(/Applications/Arduino.app/Contents/Java/hardware/arduino/avr/libraries/Wire/src)
#include_directories(/Applications/Arduino.app/Contents/Java/libraries/Servo/src)
include_directories(/Applications/Arduino.app/Contents/Java/hardware/arduino/avr)
#include_directories(/Users/katoueisuke/Documents/Arduino/libraries/Servo/src)
include_directories(/Applications/Arduino.app/Contents/Java/libraries/Servo/src)
include_directories(/Users/katoueisuke/Documents/Arduino/libraries/ST7565)
include_directories(/Users/katoueisuke/Documents/Arduino/libraries/HID-Project/src)
include_directories(/Applications/Arduino.app/Contents/Java/hardware/tools/avr/bin)
include_directories(/Users/katoueisuke/Documents/Arduino/libraries/wimleers-flexitimer2-7338cfb)
include_directories(/Users/katoueisuke/Documents/Arduino/libraries/ESP32Servo/src)

#include_directories(/Users/katoueisuke/Documents/Arduino/libraries/EspNow_Handler)